--- a/index.html
+++ b/index.html
@@ -1,55 +1,67 @@
 <!doctype html>
 <html lang="en-us">
 
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
 <head>
-  <meta charset="UTF-8">
-  <!--Responsive Mobile Meta Tag-->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>About | Hitomi</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+ <meta charset="UTF-8">
+ <!--Responsive Mobile Meta Tag-->
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <title>About | Hitomi</title>
+ <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Hitomi Barnes</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>About Me</h1>
-
-      <img src="assets/images/me.jpg" class="auth-image" alt="Hitomi">
-
-      <p>Welcome to my BIO site! </p>
-      <p>My name is Hitomi. I was working for IT companies after graduating collage as COBOL programer and IT technical engineer for EBS Financial applications. </p>
-      <p>In 2014 I was offerred the chance for an internal transfer with my global company and took this opportunity to move to the US from Japan.</p>
-      <p>I was a Oracle Customer Support Technical Engineer for Oracle EBS (All Financial Products) for 9.5 years in total after being a COBOL Programmer for 3 years.</p> 
-      <p>Then I worked as a System Engineer for 4 years in SIers working on EBS Add-on and Maintenance. Later, I worked as a Technical Support Representative skilled at analyzing complex customer's issues with focus on their satisfaction and good experience.</p>
-      <p>My Motto is to keep improving myself and moving forward in life. In 2018 I started to learn coding to step up in my career for the field of web development. 
-
-      </p>
-      
-      <p>For a personal aspect, I love Snowboarding and Bodyboarding and I used to go to the beach and the mountain during the same weekends in Japan.</p>
-      <p>Anyway, I'm enjoying my life here, recently many new restaurants have opened (I love to eat!) which always make me very happy!
-      For example, "JINYA RAMEN BAR" is a new place I want to go to as soon as possile!</p>
-
-    </section>
-
+ <header id="masthead">
+  <div class="container">
+   <a href="index.html" id="logo">Hitomi Barnes</a>
+   <nav>
+    <a href="index.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact</a>
+   </nav>
   </div>
+ </header>
 
-  <footer>
-    <div class="container">
-      Copyright &copy Hitomi Barnes
-    </div>
-  </footer>
+ <div id="main-container" class="container">
+  <section class="main-section">
+   <h1>About Me</h1>
+   <img src="assets/images/me.jpg" class="auth-image" alt="Hitomi">
+   <p>Hi, My name is Hitomi.</p>
+   <p>My career started in Japan as COBOL Programmer for 3 years, then System Engineer for 4 years in SIers working on
+    Oracle EBS Add-on and Maintenance. Later, I joined Oracle Japan and worked as Customer Support Technical Engineer
+    for Oracle EBS (All Financial Products) for 9.5 years with skill to analyze complex customer's issues with focus on
+    their satisfaction and good experience.
+    <p>In 2014 I moved to US Oracle by internal transfer and started a new career as Non-technical engineer in thie US.
+     Mainly I'm working as translator in English/Japanese for technical inquiries into almost all Oracle Products. I'm
+     always rated as top-performer (more than 130% of team average) and in 2015 - received Annual team award in Oracle.
+    </p>
+    <p>I enjoy lerning new thing to improve my self/ my skills. I went to a grad school to learn Clinical psychology for
+     2 years to do volunteer activity for Earthquake victims in Japan. (Unfortunately I needed to drop out of the school
+     to accept the transfer offer. But I will continue the learning in the future)</p>
+    <p>In 2019 in order to put myself technical field again and expand my career opportunities I graduated from UCF
+     Coding Boot Camp (Full-Stack Web Development) after learning the following technology/languages:
+     HTML5,CSS3,JavaScript,jQuery,Node.js,Responsive Design,Heroku,Git,User Authentication,PHP frameworks like
+     Laravel,React.js,MySQL and MongoDB.</p>
+
+    <table>
+     <tr>
+      <th><a href="https://www.linkedin.com/in/hitomi-b-19546432"><img src="assets/images/LI-Logo.png" class="li-logo"
+         alt="linkedin"></a></th>
+      <th><a href=""><img src="assets/images/GitHub_Logo.png" class="github-logo" alt="credit"></a></th>
+      <th><a href="https://credly.com/credit/16496372"><img src="assets/images/badge.png" class="credit-logo"
+         alt="credit"></a></th>
+
+     </tr>
+    </table>
+  </section>
+ </div>
+ <footer>
+  <div class="container">
+   Copyright &copy Hitomi Barnes
+  </div>
+ </footer>
 </body>
 
 </html>
